autopartkit (1.06) UNRELEASED; urgency=low

  * Build with new libparted ABI (1.6.12).

 -- Colin Watson <cjwatson@debian.org>  Fri,  3 Dec 2004 11:30:12 +0000

autopartkit (1.05) unstable; urgency=low

  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Hebrew (he.po) by Lior Kaplan
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 15:51:59 -0400

autopartkit (1.04) unstable; urgency=low

  * Joey Hess
    - Add an autopartkit/hide, which should hide autopartkit from the main
      menu.
  * Updated translations: 
    - Romanian (ro.po) by Eddy Petrisor

 -- Joey Hess <joeyh@debian.org>  Tue,  5 Oct 2004 17:12:49 -0400

autopartkit (1.03) unstable; urgency=low

  * Undid waldi's (undocumented) mapdevfs changes, which are responsible for
    autopartkit apparently crashing as it tries to write the fstab.

 -- Joey Hess <joeyh@debian.org>  Sun,  3 Oct 2004 21:13:31 -0400

autopartkit (1.02) unstable; urgency=low

  * Change reduce_disk_usage_size() to only reduse free space, and
    not capasity, to make sure the log reflect the size fetched from
    vgdisplay.
  * Correct size calculation code.  Make sure it don't crash if a
    partition need to have a fixed size (aka min == max).
    (Closes: #272968)

 -- Petter Reinholdtsen <pere@debian.org>  Sun,  3 Oct 2004 15:22:14 +0200

autopartkit (1.01) unstable; urgency=low

  * Petter Reinholdtsen
    - Correct partition size calculations, make sure we
      fill the disks when possible. (Closes: #268830)
  * Andreas Dahl
    - Added code to distribute lvm-volumes as well
      (Closes: #218728 and skolelinux #653)
  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Claus Hindsgaul