@@ -1,6 +1,9 @@
 autopartkit (1.06) UNRELEASED; urgency=low
 
-  * Build with new libparted ABI (1.6.12).
+  * Colin Watson
+    - Build with new libparted ABI (1.6.12).
+    - lvm_get_free_space_list() returns int, not void *; fixes compiler
+      warning.
 
  -- Colin Watson <cjwatson@debian.org>  Fri,  3 Dec 2004 11:30:12 +0000
 
